[package]
name = "posos"
version = "0.1.0"
authors = ["garnt"]
edition = "2018"

[dependencies]
bootloader = "0.3.12"
spin = "0.4.9"
uart_16550 = "0.1.0"
volatile = "0.2.3"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dev-dependencies]
array-init = "0.0.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-posos.json"
