[package]
name = "posos"
version = "0.1.0"
authors = ["garnt"]
edition = "2018"

[dependencies]
bit_field = "0.9.0"
bitflags = "1.0"
bootloader = "0.3.12"
spin = "0.4.9"
uart_16550 = "0.1.0"
volatile = "0.2.3"
x86_64 = "0.4.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dev-dependencies]
array-init = "0.0.3"

[features]
integration-test = []

[package.metadata.bootimage]
default-target = "x86_64-posos.json"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
